# open-source-buddy

./: .env.template  README.md  pyproject.toml
app/: __init__.py  config.py  github_service.py  main.py  pipeline.py  schemas.py
custom_agents/: match_agent.py  profile_agent.py  search_agent.py
examples/: pipeline_example.py
our_agents/: __init__.py  match_agent.py
tests/: __init__.py  test_agents.py  test_config.py  test_github_service.py  test_main.py  test_pipeline.py  test_schemas.py
